scripts/resources/raw/yaml/ingresses.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`local.k3s`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      services:
        - kind: TraefikService
          name: api@internal
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo
  namespace: argo
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`local.k3s`) && PathPrefix(`/argo`)
      kind: Rule
      services:
        - name: atlantbh-argo-workflows-server
          port: 80
          namespace: argo
